[tool.poetry]
name = "motorodm"
version = "0.0.10"
description = "An ODM for motor"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "motorodm" }
]
repository = "https://github.com/rob-blackbourn/motorodm"

[tool.poetry.dependencies]
python = "^3.7"
motor = "^2.0"
pytest = "^6.1.0"
pytest-asyncio = "^0.14.0"
pytest-runner = "^5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
